--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -26,8 +26,8 @@
     <a target="_blank" href="{{url_for('static',filename = autos[i]['Image'][0]) }}">
       <img src="{{url_for('static',filename = autos[i]['Image'][0]) }}" alt="Cinque Terre" width="600" height="400">
     </a>
-    <h2>{{autos[i]["Name"]}}</h2>
-        <p>{{autos[i]["Quote"]}}</p>
+    <h1>{{autos[i]["Name"]}}</h1>
+        <p style="font-size:xx-large; " >{{autos[i]["Quote"]}}</p>
   </div>
 </div>
 </div>
