--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -1,5 +1,12 @@
-* {
+
+body{
+  background-color:white;
+}
+html {
   box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
 }
 .cover{
 align-items: center;
@@ -12,7 +19,8 @@ body {
 /* Float four columns side by side */
 .column {
   float: left;
-  width: 25%;
+  width: 33.3%;
+  margin-bottom: 16px;
   padding: 0 10px;
 }
 
@@ -27,7 +35,7 @@ body {
 }
 
 /* Responsive columns */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 650px) {
   .column {
     width: 100%;
     display: block;
@@ -37,8 +45,8 @@ body {
 
 /* Style the counter cards */
 .card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 8px 0 rgb(252, 245, 245);
   padding: 16px;
   text-align: center;
-  background-color: #f1f1f1;
+  background-color:white;
 }
