--- a/src/templates/whiteauto.html
+++ b/src/templates/whiteauto.html
@@ -16,6 +16,7 @@
  <figure>
     {%for i in range(0, len)%} 
   <img src={{url_for('static',filename = autos[i]['Image'][0]) }} alt="Trulli" style="width:100%">
+  <h1>{{autos[i]["Name"]}}</h1>
   <figcaption>Fig.1 - Trulli, Puglia, Italy</figcaption>
 </figure>
 
