--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -28,11 +28,12 @@
   <div class="flip-card-inner">
     <div class="flip-card-front" >
       <img src="{{url_for('static',filename = autos[i]['Image'][0]) }}" alt="Avatar" style="width:650px;height:800px;">
-      <h1>{{autos[i]["Name"]}}</h1>
+        <!---<a href="{{ url_for('index_func') }}" target="_blank"><button>{{autos[i]["Name"]}}</button></a>-----<h1>{{autos[i]["Name"]}}</h1>-->
     </div>
     <div class="flip-card-back">
-         <a href="{{autos[i]["autographs"]}}" target="_blank">
-      <p>{{autos[i]["Quote"]}}</p>
+         <a href="{{ url_for('index_func, name = "autos[i]['Name']")'}}" target="_blank">
+      <p>{{autos[i]['Name']}}</p>
+      <h1>{{autos[i]["Quote"]}}</h1>
       </a>
     </div>
   </div>
