--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -11,8 +11,9 @@
 
 </head> 
 <body> 
+
  <div class="cover" >
-    <img src = "{{url_for('static',filename = 'cover.png') }}" class = "logo" style="height:1500px; width:3050px;"
+    <img src = "{{url_for('static',filename = 'cover.png') }}" class = "logo" style="width: 100% ;"
     
     > <br>
     </div>
