--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -1,40 +1,42 @@
 
-body{
+.main{
   background-color:black;
-  font-size: xx-large;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   font-style: italic;
-  background-image: url('/static/img/het.jpg');
-  background-repeat: repeat-y;
-  background-position: 5%;
 }
-h1{
+
+
+.para{
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 900%;
+  font-weight: bolder;
+
+}
+.para2{
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-size: 500%;
+  font-weight: bolder;
+
 }
 * {
   box-sizing: border-box;
 }
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-
 /* Float four columns side by side */
 .column {
   float: left;
-  width: 33.333%;
-  padding:  10px;
+  width: 32%;
+  padding: 0px;
   text-align: center;
   display: table-cell;
   color: beige;
+  margin-left: 1%;
   vertical-align: middle;
-  border-right: 10px solid black ;
+  border-right: 10px solid black;
   border-left: 10px solid black;
 }
 
 /* Remove extra left and right margins, due to padding in columns */
-.row {margin: 20px 0;}
+.row {margin: 10px 0;}
 
 /* Clear floats after the columns */
 .row:after {
@@ -43,20 +45,12 @@ body {
   clear: both;
 }
 
-/* Style the counter cards */
-/*.flip-card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect 
-  padding: 16px;
-  text-align: center;
-  background-color: #f1f1f1;
-}*/
-
 /* Responsive columns - one column layout (vertical) on small screens */
 @media screen and (max-width: 800px) {
   .column {
     width: 100%;
     display: block;
-    margin: 00px 0;
+    margin: 00px , 0;
   }
   
 }
@@ -65,10 +59,12 @@ body {
 
 .flip-card {
   border-style: hidden;
-  background-color:black;
-  width: 420px;
-  height: 1000px;
+  background-color: black;
+  width: 700px;
+  height: 1550px;
   perspective: 1000px;
+  
+
 }
 
 .flip-card-inner {
@@ -78,13 +74,17 @@ body {
   text-align: center;
   transition: transform 0.6s;
   transform-style: preserve-3d;
-  box-shadow: 0 4px 8px 0 black;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   padding: 16px;
+  
+
+  
 }
 
 .flip-card:hover .flip-card-inner {
-  transform: rotateY(180deg);
- /* backface-visibility: visible;*/
+ 
+  transform: rotateX(180deg);
+  backface-visibility: visible;
 
 }
 
@@ -98,13 +98,18 @@ body {
 
 .flip-card-front {
   background-color:black;
-  color:white;
+  color: black;
 }
 
 .flip-card-back {
+  transform-style: preserve-3d;
+  transition: all 1.0s linear;
+  
   background-color: beige;
   color:black;
-  transform: rotateY(180deg);
+  transform: rotateX(180deg);
+  
 
 
 }
+
