--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -7,35 +7,29 @@
     <title>AutographX - YearBook</title> 
     <!--add links to style sheets and bootstrap-->
     <link rel = "stylesheet" href = "http://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> 
-    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='css/styles.css') }}"> 
+    <link rel="stylesheet" type="text/css" href="{{url_for('static',filename='css/styles.css')}}" >
 
 </head> 
-<body> 
-
- <div class="cover" >
-    <img src = "{{url_for('static',filename = 'cover.png') }}" class = "logo" style="width: 100% ;"
+<body class="main"> 
+ <div class="cover" style="margin-bottom:5%;" >
+    <img src = "{{url_for('static',filename = 'cover.png') }}" class = "logo" style="width:100%; "
     
     > <br>
     </div>
   
-<ol style="
- margin-left:400px;
-
-"> 
+<ol> 
 <!-- For loop logic of jinja template -->
    {%for i in range(0, len)%} 
-   
-  <div class="column"> 
+  <div class="column" style="padding-left:3%;"> 
  <div class="flip-card">
   <div class="flip-card-inner">
     <div class="flip-card-front" >
-      <img src="{{url_for('static',filename = autos[i]['flask_image']) }}" alt="Avatar" style="width:650px;height:800px;">
-        <a href="{{ url_for('index_func', name =  autos[i]['Name'] ) }}" target="_blank"><button>{{ autos[i]["Name"] }}
+      <img src="{{url_for('static',filename = autos[i]['flask_image']) }}" alt="Avatar" style="width:1200px;height:1200px;">
     </div>
     <div class="flip-card-back">
-      <p>{{autos[i]['Name']}}</p>
-      <h1>{{autos[i]["Quote"]}}</h1>
-      
+      <h1 class="para">{{autos[i]['Name']}}</h1>
+              <a href="{{ url_for('index_func', name =  autos[i]['Name'] ) }}" target="_blank">
+      <p class="para2" >{{autos[i]["Quote"]}}</p>
       </a>
     </div>
   </div>
