--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -26,10 +26,11 @@
     <div class="flip-card-front" >
       <img src="{{url_for('static',filename = autos[i]['flask_image']) }}" alt="Avatar" style="width:1200px;height:1200px;">
     </div>
-    <div class="flip-card-back">
-      <h1 class="para">{{autos[i]['Name']}}</h1>
-              <a href="{{ url_for('index_func', name =  autos[i]['Name'] ) }}" target="_blank">
-      <p class="para2" >{{autos[i]["Quote"]}}</p>
+    <div class="flip-card-back ">
+      <h1 class="para" style="text-align:center;">{{autos[i]['Name']}}</h1>
+      <p class="para2" style="text-align center;" >{{autos[i]["Quote"]}}</p>
+       <a href="{{ url_for('index_func', name =  autos[i]['Name'] ) }}" target="_blank">
+         <button class="btn">Autographs</button>
       </a>
     </div>
   </div>
