fixed index errors

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -28,7 +28,7 @@
     </div>
     <div class="flip-card-back ">
       <h1 class="para" style="text-align:center;">{{autos[i]['Name']}}</h1>
-      <p class="para2" style="text-align center;" >{{autos[i]["Quote"]}}</p>
+      <p class="para2" style="text-align: center;" >{{autos[i]["Quote"]}}</p>
        <a href="{{ url_for('index_func', name =  autos[i]['Name'] ) }}" target="_blank">
          <button class="btn">Autographs</button>
       </a>
