--- a/src/static/css/autosty.css
+++ b/src/static/css/autosty.css
@@ -7,41 +7,30 @@
     margin: auto;
     
   }
-  blockquote {
-    font-size: large;
+  .animated-shadow-quote blockquote {
+    animation: shadows 2s linear infinite alternate;
+    display: inline-block;
+    margin: 0;
+    padding: 1em;
   }
-  cite {
+  .animated-shadow-quote blockquote cite {
     display: block;
-    text-align: right;
-    font-family: Verdana, Arial, sans-serif;
-    margin-top: 1rem;
-    font-size: .9rem;
-    color: #aaa;
-    font-style: normal;
-  }
-  blockquote q {
-    font-family: Georgia, serif;
     font-style: italic;
-    letter-spacing: .1rem;
+    text-align: right;
   }
-  blockquote q span { 
-    will-change: opacity, filter;
-    opacity: 0;
-    filter: blur(0px);
+  .animated-shadow-quote blockquote cite:before {
+    content: "- ";
   }
-  q {
-    quotes: "“" "”" "‘" "’";
-  }
-  q:before {
-      content: open-quote;
-      margin-right: .8rem;
-  }
-  q:after {
-    content: close-quote;
-  }
-  q:before, q:after {
-    color: #ccc;
-    font-size: 1rem;
+  
+  @keyframes shadows {
+    0% {
+      box-shadow: 0 2px 4px -2px rgb(253, 253, 253);
+      transform: scale(0.95);
+    }
+    100% {
+      box-shadow: 0 0 4px 2px rgb(252, 249, 249);
+      transform: scale(1);
+    }
   }
   
   
@@ -62,7 +51,7 @@
   p{
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     text-align: center;
-    color: blueviolet;
+    color: black;
     font-size: 100%;
     font-weight: bold;
     }
