--- a/src/templates/whiteauto.html
+++ b/src/templates/whiteauto.html
@@ -19,54 +19,13 @@
       {% if name in autos[i]['Name'] %}
             {% for x,y in autos[i]['autographs'].items() %}
             <div class="container">
-       <div class="column">
+       <div class="column" style="padding-left:2.15%;">
         <div class="thought">
-                  <div onload="splitWords();" >
-                  <blockquote style="font-size:450%;" contenteditable="true"><q>{{ y }}</q>
+                  <div class="animated-shadow-quote" >
+                  <blockquote style="font-size:450%;"><p>{{ y }}</p>
                      <cite style="font-size:100%;">{{ x }}</cite>
                     </blockquote>
-                      <script>
-function splitWords() {
-  let quote = document.querySelector("blockquote q");
-  quote.innerText.replace(/(<([^>]+)>)/ig,"");
-  quotewords = quote.innerText.split(" "),
-  wordCount = quotewords.length;
-  quote.innerHTML = "";
-  for (let i=0; i < wordCount; i++) {
-    quote.innerHTML += "<span>"+quotewords[i]+"</span>";
-    if (i < quotewords.length - 1) {
-      quote.innerHTML += " ";
-    }
-  }
-  quotewords = document.querySelectorAll("blockquote q span");
-  fadeWords(quotewords);
-}
-
-function getRandom(min, max) {
-  return Math.random() * (max - min) + min;
-}
-
-function fadeWords(quotewords) {
-  Array.prototype.forEach.call(quotewords, function(word) {
-    let animate = word.animate([{
-      opacity: 0,
-      filter: "blur("+getRandom(2,5)+"px)"
-    }, {
-      opacity: 1,
-      filter: "blur(0px)"
-    }], 
-    { 
-      duration: 1000,
-      delay: getRandom(500,3300),
-      fill: 'forwards'
-    } 
-   )
-  })
-}
-
-
-splitWords();      
-</script>
+                      
                         
                   </div>
            </div>
