--- a/src/templates/whiteauto.html
+++ b/src/templates/whiteauto.html
@@ -22,7 +22,7 @@
        <div class="column" style="padding-left:2.15%;">
         <div class="thought">
                   <div class="animated-shadow-quote" >
-                  <blockquote style="font-size:450%;"><p>{{ y }}</p>
+                  <blockquote style="font-size:450% ;font-family: Georgia, serif;"><p>{{ y }}</p>
                      <cite style="font-size:100%;">{{ x }}</cite>
                     </blockquote>
                       
