--- a/src/static/css/autosty.css
+++ b/src/static/css/autosty.css
@@ -12,6 +12,8 @@
     display: inline-block;
     margin: 0;
     padding: 1em;
+    justify-content: center;
+  align-items: center;
   }
   .animated-shadow-quote blockquote cite {
     display: block;
@@ -49,11 +51,13 @@
     font-weight: bold;
   }
   p{
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    text-align: center;
+    font-family: Georgia, serif;
+    font-style: italic;
+        text-align: center;
     color: black;
     font-size: 100%;
-    font-weight: bold;
+    font-weight: 800;
+
     }
 
   /* Float four columns side by side */
