--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -4,19 +4,6 @@
   font-style: italic;
 }
 
-
-.para{
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size: 900%;
-  font-weight: bolder;
-
-}
-.para2{
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  font-size: 500%;
-  font-weight: bolder;
-
-}
 * {
   box-sizing: border-box;
 }
@@ -60,61 +47,14 @@
 .flip-card {
   border-style: hidden;
   background-color: black;
-  width: 700px;
-  height: 1550px;
+  width: 1500px;
+  height: 1650px;
   perspective: 1000px;
   
 
 }
 
-.flip-card-inner {
-  position: absolute;
-  width: 100%;
-  height: 80%;
-  text-align: center;
-  transition: transform 0.6s;
-  transform-style: preserve-3d;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  padding: 16px;
-  
-
-  
-}
-
-.flip-card:hover .flip-card-inner {
- 
-  transform: rotateX(180deg);
-  backface-visibility: visible;
-
-}
-
-.flip-card-front,
-.flip-card-back {
-  position: absolute;
-  width: 200%;
-  height: 100%;
-  backface-visibility: hidden;
-}
-
-.flip-card-front {
-  background-color:black;
-  color: black;
-}
-
-.flip-card-back {
-  transform-style: preserve-3d;
-  transition: all 1.0s linear;
-  
-  background-color: beige;
-  color:black;
-  transform: rotateX(180deg);
-  
-
-
-}
-
 .btn {
-  vertical-align: bottom;  
   background-color: blue;
   border: none;
   color: white;
@@ -129,5 +69,97 @@
 
 .btn:hover {
   opacity: 1;
+  color: black;
   background-color: rgb(83, 83, 218);
+}
+.intro p {
+  margin: 0 auto;
+  font-size: 1.2rem;
+  font-weight: 300;
+  line-height: 1.6;
+}
+
+.regular {
+ 
+  position: relative;
+  transform: none;
+  overflow: hidden;
+  transition: opacity 1000ms ease-in-out, transform 800ms ease-in-out;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
+.regular:hover .img, .regular:focus .img {
+  transform: scale(1.05);
+  transition: all 220ms ease-in-out;
+}
+.regular:hover .overlay, .regular:focus .overlay {
+  background-color: rgba(13, 13, 13, 0.6);
+  transition: all 220ms ease-in-out;
+}
+.regular:hover .text, .regular:focus .text {
+  opacity: 1;
+  transition: opacity 330ms ease-in-out;
+}
+
+.text {
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  z-index: 4;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: opacity 220ms ease-in-out;
+}
+.text > p {
+  font-weight: 900;
+  font-size: 500%;
+  line-height: 1;
+  color:white;
+  
+}
+.text > h1 {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size:  900%;
+  text-align: center;
+  text-decoration: none;
+  font-weight: 400;
+  line-height: 1;
+  border-bottom: 2px solid #FFF;
+  color:white;
+  transition: all 220ms ease-in-out;
+}
+.text > h1:hover ,p:hover {
+  cursor: pointer;
+  color:black;
+  border-color: black;
+  transition: all 220ms ease-in-out;
+}
+.overlay {
+  
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 3;
+  transition: all 220ms ease-in-out;
+}
+
+.img {
+  object-fit: cover;
+  transition:  ease-in-out;
+}
+
+@media screen and (min-width: 767px) {
+  .tall {
+    grid-row-end: span 2;
+  }
+
+  .wide {
+    grid-column-end: span 2;
+  }
+
+  .intro h1 {
+    font-size: 4rem;
+  }
+  .intro p {
+    font-size: 1.4rem;
+  }
 }
