--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -1,7 +1,8 @@
 
 .main{
   background-color:black;
-  font-style: italic;
+  font-family: 'Poppins', sans-serif;
+
 }
 
 * {
@@ -21,6 +22,124 @@
   border-right: 10px solid black;
   border-left: 10px solid black;
 }
+
+
+
+.regular {
+  height: auto;
+  width: auto;
+  position: relative;
+  transform: none;
+  overflow: hidden;
+  transition: opacity 1000ms ease-in-out, transform 800ms ease-in-out;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
+.regular:hover .img, .regular:focus .img {
+  transform: scale(1.05);
+  transition: all 220ms ease-in-out;
+}
+.regular:hover .overlay, .regular:focus .overlay {
+  background-color: rgba(13, 13, 13, 0.6);
+  transition: all 220ms ease-in-out;
+}
+.regular:hover .text, .regular:focus .text {
+  opacity: 1;
+  transition: opacity 330ms ease-in-out;
+}
+
+.text {
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  z-index: 4;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  opacity: 0;
+  transition: opacity 220ms ease-in-out;
+}
+.text > p {
+  font-weight: 400;
+  font-size: 500%;
+  line-height: 1.1;
+  color:white;
+  padding-top: 3%;
+}
+.text > h1 {
+  font-size:  700%;
+  text-align: center;
+  text-decoration: none;
+  font-weight: 900;
+  line-height: 1.7;
+  border-bottom: 2px solid #FFF;
+  color:white;
+  transition: all 220ms ease-in-out;
+}
+.text > a {
+  font-size: 500%;
+  text-decoration: none;
+  font-weight: 400;
+  line-height: 5.5;
+  border-bottom: 2px solid #FFF;
+  color: #FFF;
+  transition: all 220ms ease-in-out;
+}
+.text > a:hover {
+  cursor: pointer;
+  color: #ff28de;
+  border-color: #ff28de;
+  transition: all 220ms ease-in-out;
+}
+
+.overlay {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 3;
+  transition: all 220ms ease-in-out;
+}
+
+.img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: all 220ms ease-in-out;
+}
+
+@media screen and (min-width: 767px) {
+  .tall {
+    grid-row-end: span 2;
+  }
+
+  .wide {
+    grid-column-end: span 2;
+  }
+
+  .intro h1 {
+    font-size: 4rem;
+  }
+  .intro p {
+    font-size: 1.4rem;
+  }
+}
+
+.hide {
+  height: 0;
+  width: 0;
+  overflow: hidden;
+  opacity: 0;
+  animation: load-out 660ms ease-out forwards;
+}
+
+
+.hidden {
+  height: 0;
+  position: absolute;
+  transform: translateY(-1rem);
+  opacity: 0;
+}
+
 
 /* Remove extra left and right margins, due to padding in columns */
 .row {margin: 10px 0;}
@@ -72,100 +191,6 @@
   color: black;
   background-color: rgb(83, 83, 218);
 }
-.intro p {
-  margin: 0 auto;
-  font-size: 1.2rem;
-  font-weight: 300;
-  line-height: 1.6;
-}
 
-.regular {
- 
-  position: relative;
-  transform: none;
-  overflow: hidden;
-  transition: opacity 1000ms ease-in-out, transform 800ms ease-in-out;
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-}
-.regular:hover .img, .regular:focus .img {
-  transform: scale(1.05);
-  transition: all 220ms ease-in-out;
-}
-.regular:hover .overlay, .regular:focus .overlay {
-  background-color: rgba(13, 13, 13, 0.6);
-  transition: all 220ms ease-in-out;
-}
-.regular:hover .text, .regular:focus .text {
-  opacity: 1;
-  transition: opacity 330ms ease-in-out;
-}
-
-.text {
-  position: absolute;
-  top: 45%;
-  left: 50%;
-  z-index: 4;
-  transform: translate(-50%, -50%);
-  opacity: 0;
-  transition: opacity 220ms ease-in-out;
-}
-.text > p {
-  font-weight: 900;
-  font-size: 500%;
-  line-height: 1;
-  color:white;
   
-}
-.text > h1 {
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size:  900%;
-  text-align: center;
-  text-decoration: none;
-  font-weight: 400;
-  line-height: 1;
-  border-bottom: 2px solid #FFF;
-  color:white;
-  transition: all 220ms ease-in-out;
-}
-.text > h1:hover ,p:hover {
-  cursor: pointer;
-  color:black;
-  border-color: black;
-  transition: all 220ms ease-in-out;
-}
-.overlay {
-  
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 3;
-  transition: all 220ms ease-in-out;
-}
 
-.img {
-  object-fit: cover;
-  transition:  ease-in-out;
-}
-
-@keyframes load-in {
-  100% { opacity: 1; }
-}
-@keyframes load-out {
-  100% { opacity: 0; }
-}
-@media screen and (min-width: 767px) {
-  .tall {
-    grid-row-end: span 2;
-  }
-
-  .wide {
-    grid-column-end: span 2;
-  }
-
-  .intro h1 {
-    font-size: 4rem;
-  }
-  .intro p {
-    font-size: 1.4rem;
-  }
-}
