--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -26,9 +26,8 @@
     <div class="text ">
       <h1  style="text-align:center;">{{autos[i]['Name']}}</h1>
       <p  style="text-align: center;" >{{autos[i]["Quote"]}}</p>
-       <a href="{{ url_for('index_func', name =  autos[i]['Name'] ) }}" target="_blank">
-         <button class="btn">Autographs</button>
-      </a>
+            <a href="{{ url_for('index_func', name =  autos[i]['Name'] ) }}" target="_blank" title="To the art.">See more</a>
+
     </div>
   <div class="overlay" ></div>
       <img style="width:1200px;height:1200px;" class="img" src="{{url_for('static',filename = autos[i]['flask_image']) }}" alt="Avatar" style="width:1200px;height:1200px;">
@@ -42,5 +41,6 @@
 </ol> 
 <script src="{{url_for('static', filename='index.js')}}"></script>
 <script src = "http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">  </script>
+
 </body> 
 </html> 
