--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -8,6 +8,7 @@
     <!--add links to style sheets and bootstrap-->
     <link rel = "stylesheet" href = "http://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> 
     <link rel="stylesheet" type="text/css" href="{{url_for('static',filename='css/styles.css')}}" >
+     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet"> 
 
 </head> 
 <body class="main"> 
