--- a/src/templates/whiteauto.html
+++ b/src/templates/whiteauto.html
@@ -5,6 +5,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Your Autographs</title> 
    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='css/autosty.css') }}"> 
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@1&display=swap" rel="stylesheet"> 
 
 </head>
 <body class="sub">
