--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,11 +9,15 @@
     <link rel = "stylesheet" href = "http://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> 
     <link rel="stylesheet" type="text/css" href="{{url_for('static',filename='css/styles.css')}}" >
      <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet"> 
-
+<style>
+  .Image {
+    max-width: 1px;
+  }
+</style>
 </head> 
 <body class="main"> 
  <div class="cover" style="margin-bottom:1%;" >
-    <img src = "{{url_for('static',filename = 'cover.png') }}" class = "logo" style="width:100%; "
+    <img style="width: 3300px;" src = "{{url_for('static',filename = 'cover.png') }}" class = "logo" style="width:100%; "
     
     > <br>
     </div>
@@ -25,13 +29,13 @@
  <div class="flip-card">
       <div class="regular">
     <div class="text ">
-      <h1  style="text-align:center;">{{autos[i]['Name']}}</h1>
+      <h1 class=".container-fluid" style="text-align:center;">{{autos[i]['Name']}}</h1>
       <p  style="text-align: center;" >{{autos[i]["Quote"]}}</p>
-            <a href="{{ url_for('index_func', name =  autos[i]['Name'] ) }}" target="_blank" title="To the art.">See more</a>
+            <a href="{{ url_for('index_func', name =  autos[i]['Name'] ) }}" target="_blank" title="To the art." class="Image">See more</a>
 
     </div>
   <div class="overlay" ></div>
-      <img style="width:1200px;height:1200px;" class="img" src="{{url_for('static',filename = autos[i]['flask_image']) }}" alt="Avatar" style="width:1200px;height:1200px;">
+      <img style="width:1000px;height:1200px;" class="img" src="{{url_for('static',filename = autos[i]['flask_image']) }}" alt="Avatar" style="width:1200px;height:1200px;">
     </div>
 </div> 
 </div>
